<resources>
    <string name="app_name">SQLite_DataBase__Notification_&amp;_Permission_Demo</string>

    <string name="app_name_1">SQLite DataBase, Notification</string>
    <string name="app_name_2">And</string>
    <string name="app_name_3">Permission Demo</string>

    <!--    Login & SignUp Activity -->

    <string name="loginAccount">Login Account</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="valid">Valid!</string>
    <string name="unValid">UnValid!</string>
    <string name="userName">User Name</string>
    <string name="userPassword">Password</string>
    <string name="userNumber">Enter Number</string>
    <string name="userEmail">Enter Email</string>
    <string name="userConfirmPassWord">Confirm PassWord</string>
    <string name="submitLoginDetailsBtn">Submit</string>
    <string name="createNewAccountDetailsBtn">Create</string>

    <!--    Single User Activity -->

    <string name="singleActivityUserName">User Name \t:\t</string>
    <string name="singleActivityUserNumber">User Number \t:\t</string>
    <string name="singleActivityUserEmail">User Email \t:\t</string>
    <string name="singleActivityUserEdit">Edit</string>
    <string name="singleActivityUserDelete">Delete</string>

<!--        Update User Details -->

    <string name="updateDetails">Update Details</string>
    <string name="updateBtn">Update</string>

</resources>