<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/createNewAccount"
            android:textColor="@color/teal_700"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/userNameSignUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userNameValidationSignUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameSignUpActivity" />

            <EditText
                android:id="@+id/userNumberSignUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userNumber"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameValidationSignUpActivity"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userNumberValidationSignUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNumberSignUpActivity" />

            <EditText
                android:id="@+id/userEmailSignUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNumberValidationSignUpActivity"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userEmailValidationSignUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmailSignUpActivity" />

            <EditText
                android:id="@+id/userPassWordSignUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmailValidationSignUpActivity"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/userPassWordValidationSignUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPassWordSignUpActivity" />

            <EditText
                android:id="@+id/userConfirmPassWordSignUpActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userConfirmPassWord"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPassWordValidationSignUpActivity"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/userConfirmPassWordValidationSignUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userConfirmPassWordSignUpActivity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/createBtnSignUpActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/createNewAccountDetailsBtn" />

        <TextView
            android:id="@+id/loginAccountTextSignUpActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loginAccount"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>