<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/updateDetails"
            android:textColor="@color/teal_700"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/userNameUpdateUserDetailsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userNameValidationUpdateUserDetailsActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameUpdateUserDetailsActivity" />

            <EditText
                android:id="@+id/userNumberUpdateUserDetailsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userNumber"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameValidationUpdateUserDetailsActivity"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userNumberValidationUpdateUserDetailsActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNumberUpdateUserDetailsActivity" />

            <EditText
                android:id="@+id/userEmailUpdateUserDetailsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/userEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNumberValidationUpdateUserDetailsActivity"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/userEmailValidationUpdateUserDetailsActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmailUpdateUserDetailsActivity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/updateBtnUpdateUserDetailsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/updateBtn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>